<?xml version="1.2"?>
<package format="2">
  <name>mcity_localization</name>
  <version>1.0.0</version>
  <description>The mcity localization package</description>
 
  <maintainer email="zhijieq@umich.edu">Zhijie Qiao</maintainer>
  <license>To Commercialize</license>
  <author email="shaobxu@gmail.com">Zhijie Qiao</author>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>
  <buildtool_depend>autoware_cmake</buildtool_depend>

  <depend>rclpy</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>std_msgs</depend> 
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
 
  <exec_depend>ros2launch</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>autoware_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
  
</package>

